Vitis/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
Nothing to build in platform 'SolarMotorPlatform'

14:20:59 **** Incremental Build of configuration Debug for project SolarServoApp ****
make all 
'Building file: ../src/PWMTester.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/PWMTester.o" -ID:/PSU_Work_and_Textbooks/ECE544/ECE544_ProjFinal/ECE-544-final-project/Vitis/SolarMotorPlatform/export/SolarMotorPlatform/sw/SolarMotorPlatform/standalone_domain/bspinclude/include -mlittle-endian -mcpu=v11.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/PWMTester.d" -MT"src/PWMTester.o" -o "src/PWMTester.o" "../src/PWMTester.c"
../src/PWMTester.c:839:1: warning: return type defaults to 'int' [-Wimplicit-int]
  839 | PWM_Get_Duty(u32 baseAddr, u32 pwmIndex)
      | ^~~~~~~~~~~~
../src/PWMTester.c:839:1: error: conflicting types for 'PWM_Get_Duty'
In file included from ../src/PWMTester.c:48:
D:/PSU_Work_and_Textbooks/ECE544/ECE544_ProjFinal/ECE-544-final-project/Vitis/SolarMotorPlatform/export/SolarMotorPlatform/sw/SolarMotorPlatform/standalone_domain/bspinclude/include/PWM.h:81:5: note: previous declaration of 'PWM_Get_Duty' was here
   81 | u32 PWM_Get_Duty(u32 baseAddr, u32 pwmIndex);
      |     ^~~~~~~~~~~~
../src/PWMTester.c: In function 'PWM_Get_Duty':
../src/PWMTester.c:840: error: expected '{' at end of input
../src/PWMTester.c:839:1: warning: control reaches end of non-void function [-Wreturn-type]
  839 | PWM_Get_Duty(u32 baseAddr, u32 pwmIndex)
      | ^~~~~~~~~~~~
make: *** [src/subdir.mk:26: src/PWMTester.o] Error 1
14:21:00 **** Incremental Build of configuration Debug for project SolarServoApp_system ****
make all 
Skipping SD card image generation. Reason: "The system project only has applications for microblaze processors."
